# ai-engineering-bootcamp-python

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  render.yaml
session-1/: .dockerignore  Dockerfile  README.md  anthropic_client_requests.py  anthropic_client_sdk.py  main.py  pyproject.toml  simple_env_test.py
session-2/: README.md  evaluationquestions.md  main.py  pyproject.toml  ragexperiment-1.ipynb  ragexperiment-2-embedding-eval.ipynb  ragexperiment-3-langchain-load.ipynb  ragexperiment-3-langchain.ipynb  ragexperiment-4-productionready.ipynb  ragexperiment-5-production-simplification.ipynb  ragexperiment-6-simplified.ipynb  ragexperiment-7-class-architecture.ipynb  ragexperiment-8-gradio-ui.ipynb  ragexperiment-embedding-eval.ipynb
session-2/data/: test_queries.txt
session-2/scripts/: baseline_ingest.py  contextual_ingest.py
