[project]
name = "session-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.109.1",
    "chromadb>=1.5.9",
    "jupyter>=1.1.1",
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "openai>=2.43.0",
    "pydantic>=2.13.4",
    "pypdf>=6.13.3",
    "python-dotenv>=1.2.2",
    "gradio>=5.0.0",
    "sentence-transformers>=5.6.0",
    "tiktoken>=0.13.0",
]
